feat: add localization keys for custom fields

--- a/lib/l10n/arb/app_ar.arb
+++ b/lib/l10n/arb/app_ar.arb
@@ -947,6 +947,7 @@
   "diveLog_detail_collapsed_cnsMaxPpO2": "CNS: {cns} • أقصى ppO₂: {maxPpO2}",
   "diveLog_detail_collapsed_cnsMaxPpO2AtTime": "CNS: {cns} • أقصى ppO₂: {maxPpO2} • عند {timestamp}: {ppO2} بار",
   "diveLog_detail_collapsed_ndl": "NDL: {value}",
+  "diveLog_detail_customFieldCount": "{count, plural, =1{1 field} other{{count} fields}}",
   "diveLog_detail_equipmentCount": "{count} {count, plural, =1{عنصر} other{عناصر}}",
   "diveLog_detail_errorLoading": "خطأ في تحميل الغوصة",
   "diveLog_detail_fullscreen_sampleData": "بيانات العينة",
@@ -989,6 +990,7 @@
   "diveLog_detail_section_altitudeDive": "غوصة ارتفاع",
   "diveLog_detail_section_buddies": "زملاء الغوص",
   "diveLog_detail_section_conditions": "الظروف",
+  "diveLog_detail_section_customFields": "Custom Fields",
   "diveLog_detail_section_decoStatus": "حالة تخفيف الضغط",
   "diveLog_detail_section_details": "التفاصيل",
   "diveLog_detail_section_diveProfile": "ملف الغوصة",
@@ -1032,6 +1034,7 @@
   "diveLog_editSighting_removeTitle": "إزالة المشاهدة؟",
   "diveLog_editSighting_save": "حفظ التغييرات",
   "diveLog_edit_add": "إضافة",
+  "diveLog_edit_addCustomField": "Add Field",
   "diveLog_edit_addTank": "إضافة أسطوانة",
   "diveLog_edit_addWeightEntry": "إضافة إدخال أثقال",
   "diveLog_edit_addedGps": "تمت إضافة GPS إلى {name}",
@@ -1040,6 +1043,10 @@
   "diveLog_edit_cancel": "إلغاء",
   "diveLog_edit_clearAllEquipment": "مسح الكل",
   "diveLog_edit_createdSite": "تم إنشاء الموقع: {name}",
+  "diveLog_edit_customFieldKey": "Key",
+  "diveLog_edit_customFieldKeyHint": "e.g., camera_settings",
+  "diveLog_edit_customFieldValue": "Value",
+  "diveLog_edit_customFieldValueHint": "e.g., f/8 ISO400",
   "diveLog_edit_durationMinutes": "المدة: {minutes} min",
   "diveLog_edit_equipmentHint": "انقر \"استخدام طقم\" أو \"إضافة\" لاختيار المعدات",
   "diveLog_edit_errorLoadingDiveTypes": "خطأ في تحميل أنواع الغوص: {error}",
@@ -1080,6 +1087,7 @@
   "diveLog_edit_saveAsSetDialog_title": "حفظ كطقم معدات",
   "diveLog_edit_saveAsSetDialog_validation": "يرجى إدخال اسم الطقم",
   "diveLog_edit_section_conditions": "الظروف",
+  "diveLog_edit_section_customFields": "Custom Fields",
   "diveLog_edit_section_depthDuration": "العمق والمدة",
   "diveLog_edit_section_diveCenter": "مركز الغوص",
   "diveLog_edit_section_diveSite": "موقع الغوص",
@@ -1350,6 +1358,8 @@
   "diveLog_search_appBar": "بحث متقدم",
   "diveLog_search_cancel": "إلغاء",
   "diveLog_search_clearAll": "مسح الكل",
+  "diveLog_search_customFieldKey": "Custom Field Key",
+  "diveLog_search_customFieldValue": "Value contains...",
   "diveLog_search_end": "النهاية",
   "diveLog_search_errorLoadingCenters": "خطأ في تحميل مراكز الغوص",
   "diveLog_search_errorLoadingDiveTypes": "خطأ في تحميل أنواع الغوص",
