--- a/lib/l10n/arb/app_es.arb
+++ b/lib/l10n/arb/app_es.arb
@@ -590,6 +590,7 @@
   "diveLog_detail_button_rangeAnalysis": "Análisis de rango",
   "diveLog_detail_button_showEnd": "Mostrar final",
   "diveLog_detail_captureSignature": "Capturar firma del instructor",
+  "diveLog_detail_customFieldCount": "{count, plural, =1{1 field} other{{count} fields}}",
   "diveLog_detail_equipmentCount": "{count} {count, plural, =1{elemento} other{elementos}}",
   "diveLog_detail_errorLoading": "Error al cargar la inmersión",
   "diveLog_detail_label_airTemp": "Temp. del aire",
@@ -628,6 +629,7 @@
   "diveLog_detail_section_altitudeDive": "Inmersión en altitud",
   "diveLog_detail_section_buddies": "Compañeros",
   "diveLog_detail_section_conditions": "Condiciones",
+  "diveLog_detail_section_customFields": "Custom Fields",
   "diveLog_detail_section_decoStatus": "Estado de descompresión",
   "diveLog_detail_section_details": "Detalles",
   "diveLog_detail_section_diveProfile": "Perfil de inmersión",
@@ -671,6 +673,7 @@
   "diveLog_editSighting_removeTitle": "¿Quitar avistamiento?",
   "diveLog_editSighting_save": "Guardar cambios",
   "diveLog_edit_add": "Agregar",
+  "diveLog_edit_addCustomField": "Add Field",
   "diveLog_edit_addTank": "Agregar tanque",
   "diveLog_edit_addWeightEntry": "Agregar entrada de lastre",
   "diveLog_edit_addedGps": "GPS agregado a {name}",
@@ -679,6 +682,10 @@
   "diveLog_edit_cancel": "Cancelar",
   "diveLog_edit_clearAllEquipment": "Limpiar todo",
   "diveLog_edit_createdSite": "Punto de buceo creado: {name}",
+  "diveLog_edit_customFieldKey": "Key",
+  "diveLog_edit_customFieldKeyHint": "e.g., camera_settings",
+  "diveLog_edit_customFieldValue": "Value",
+  "diveLog_edit_customFieldValueHint": "e.g., f/8 ISO400",
   "diveLog_edit_durationMinutes": "Duración: {minutes} min",
   "diveLog_edit_equipmentHint": "Toca \"Usar conjunto\" o \"Agregar\" para seleccionar equipo",
   "diveLog_edit_errorLoadingDiveTypes": "Error al cargar tipos de inmersión: {error}",
@@ -719,6 +726,7 @@
   "diveLog_edit_saveAsSetDialog_title": "Guardar como conjunto de equipo",
   "diveLog_edit_saveAsSetDialog_validation": "Por favor ingresa un nombre para el conjunto",
   "diveLog_edit_section_conditions": "Condiciones",
+  "diveLog_edit_section_customFields": "Custom Fields",
   "diveLog_edit_section_depthDuration": "Profundidad y duración",
   "diveLog_edit_section_diveCenter": "Centro de buceo",
   "diveLog_edit_section_diveSite": "Punto de buceo",
@@ -986,6 +994,8 @@
   "diveLog_search_appBar": "Busqueda avanzada",
   "diveLog_search_cancel": "Cancelar",
   "diveLog_search_clearAll": "Borrar todo",
+  "diveLog_search_customFieldKey": "Custom Field Key",
+  "diveLog_search_customFieldValue": "Value contains...",
   "diveLog_search_end": "Fin",
   "diveLog_search_errorLoadingCenters": "Error al cargar los centros de buceo",
   "diveLog_search_errorLoadingTrips": "Error al cargar los viajes",
