--- a/lib/l10n/arb/app_fr.arb
+++ b/lib/l10n/arb/app_fr.arb
@@ -947,6 +947,7 @@
   "diveLog_detail_collapsed_cnsMaxPpO2": "CNS : {cns} • Max ppO₂ : {maxPpO2}",
   "diveLog_detail_collapsed_cnsMaxPpO2AtTime": "CNS : {cns} • Max ppO₂ : {maxPpO2} • À {timestamp} : {ppO2} bar",
   "diveLog_detail_collapsed_ndl": "DTR : {value}",
+  "diveLog_detail_customFieldCount": "{count, plural, =1{1 field} other{{count} fields}}",
   "diveLog_detail_equipmentCount": "{count} {count, plural, =1{equipement} other{equipements}}",
   "diveLog_detail_errorLoading": "Erreur lors du chargement de la plongee",
   "diveLog_detail_fullscreen_sampleData": "Données d'échantillon",
@@ -989,6 +990,7 @@
   "diveLog_detail_section_altitudeDive": "Plongee en altitude",
   "diveLog_detail_section_buddies": "Binomes",
   "diveLog_detail_section_conditions": "Conditions",
+  "diveLog_detail_section_customFields": "Custom Fields",
   "diveLog_detail_section_decoStatus": "Statut de decompression",
   "diveLog_detail_section_details": "Details",
   "diveLog_detail_section_diveProfile": "Profil de plongee",
@@ -1032,6 +1034,7 @@
   "diveLog_editSighting_removeTitle": "Retirer l'observation ?",
   "diveLog_editSighting_save": "Enregistrer les modifications",
   "diveLog_edit_add": "Ajouter",
+  "diveLog_edit_addCustomField": "Add Field",
   "diveLog_edit_addTank": "Ajouter un bloc",
   "diveLog_edit_addWeightEntry": "Ajouter un lest",
   "diveLog_edit_addedGps": "GPS ajoute a {name}",
@@ -1040,6 +1043,10 @@
   "diveLog_edit_cancel": "Annuler",
   "diveLog_edit_clearAllEquipment": "Tout effacer",
   "diveLog_edit_createdSite": "Site cree : {name}",
+  "diveLog_edit_customFieldKey": "Key",
+  "diveLog_edit_customFieldKeyHint": "e.g., camera_settings",
+  "diveLog_edit_customFieldValue": "Value",
+  "diveLog_edit_customFieldValueHint": "e.g., f/8 ISO400",
   "diveLog_edit_durationMinutes": "Duree : {minutes} min",
   "diveLog_edit_equipmentHint": "Appuie sur \"Utiliser un set\" ou \"Ajouter\" pour selectionner l'equipement",
   "diveLog_edit_errorLoadingDiveTypes": "Erreur lors du chargement des types de plongee : {error}",
@@ -1080,6 +1087,7 @@
   "diveLog_edit_saveAsSetDialog_title": "Enregistrer comme set d'equipement",
   "diveLog_edit_saveAsSetDialog_validation": "Veuillez entrer un nom de set",
   "diveLog_edit_section_conditions": "Conditions",
+  "diveLog_edit_section_customFields": "Custom Fields",
   "diveLog_edit_section_depthDuration": "Profondeur et duree",
   "diveLog_edit_section_diveCenter": "Centre de plongee",
   "diveLog_edit_section_diveSite": "Site de plongee",
@@ -1350,6 +1358,8 @@
   "diveLog_search_appBar": "Recherche avancee",
   "diveLog_search_cancel": "Annuler",
   "diveLog_search_clearAll": "Tout effacer",
+  "diveLog_search_customFieldKey": "Custom Field Key",
+  "diveLog_search_customFieldValue": "Value contains...",
   "diveLog_search_end": "Fin",
   "diveLog_search_errorLoadingCenters": "Erreur de chargement des centres de plongee",
   "diveLog_search_errorLoadingDiveTypes": "Erreur lors du chargement des types de plongée",
