--- a/lib/l10n/arb/app_he.arb
+++ b/lib/l10n/arb/app_he.arb
@@ -590,6 +590,7 @@
   "diveLog_detail_button_rangeAnalysis": "ניתוח טווח",
   "diveLog_detail_button_showEnd": "הצגת סיום",
   "diveLog_detail_captureSignature": "קליטת חתימת מדריך",
+  "diveLog_detail_customFieldCount": "{count, plural, =1{1 field} other{{count} fields}}",
   "diveLog_detail_equipmentCount": "{count} {count, plural, =1{פריט} other{פריטים}}",
   "diveLog_detail_errorLoading": "שגיאה בטעינת צלילה",
   "diveLog_detail_label_airTemp": "טמפ' אוויר",
@@ -628,6 +629,7 @@
   "diveLog_detail_section_altitudeDive": "צלילת גובה",
   "diveLog_detail_section_buddies": "שותפים",
   "diveLog_detail_section_conditions": "תנאים",
+  "diveLog_detail_section_customFields": "Custom Fields",
   "diveLog_detail_section_decoStatus": "מצב דקומפרסיה",
   "diveLog_detail_section_details": "פרטים",
   "diveLog_detail_section_diveProfile": "פרופיל צלילה",
@@ -671,6 +673,7 @@
   "diveLog_editSighting_removeTitle": "הסרת תצפית?",
   "diveLog_editSighting_save": "שמירת שינויים",
   "diveLog_edit_add": "הוספה",
+  "diveLog_edit_addCustomField": "Add Field",
   "diveLog_edit_addTank": "הוספת בלון",
   "diveLog_edit_addWeightEntry": "הוספת רשומת משקל",
   "diveLog_edit_addedGps": "GPS נוסף ל-{name}",
@@ -679,6 +682,10 @@
   "diveLog_edit_cancel": "ביטול",
   "diveLog_edit_clearAllEquipment": "ניקוי הכל",
   "diveLog_edit_createdSite": "אתר נוצר: {name}",
+  "diveLog_edit_customFieldKey": "Key",
+  "diveLog_edit_customFieldKeyHint": "e.g., camera_settings",
+  "diveLog_edit_customFieldValue": "Value",
+  "diveLog_edit_customFieldValueHint": "e.g., f/8 ISO400",
   "diveLog_edit_durationMinutes": "משך: {minutes} min",
   "diveLog_edit_equipmentHint": "הקש \"שימוש בסט\" או \"הוספה\" לבחירת ציוד",
   "diveLog_edit_errorLoadingDiveTypes": "שגיאה בטעינת סוגי צלילה: {error}",
@@ -719,6 +726,7 @@
   "diveLog_edit_saveAsSetDialog_title": "שמירה כסט ציוד",
   "diveLog_edit_saveAsSetDialog_validation": "נא להזין שם לסט",
   "diveLog_edit_section_conditions": "תנאים",
+  "diveLog_edit_section_customFields": "Custom Fields",
   "diveLog_edit_section_depthDuration": "עומק ומשך",
   "diveLog_edit_section_diveCenter": "מועדון צלילה",
   "diveLog_edit_section_diveSite": "אתר צלילה",
@@ -986,6 +994,8 @@
   "diveLog_search_appBar": "חיפוש מתקדם",
   "diveLog_search_cancel": "ביטול",
   "diveLog_search_clearAll": "נקה הכל",
+  "diveLog_search_customFieldKey": "Custom Field Key",
+  "diveLog_search_customFieldValue": "Value contains...",
   "diveLog_search_end": "סיום",
   "diveLog_search_errorLoadingCenters": "שגיאה בטעינת מרכזי צלילה",
   "diveLog_search_errorLoadingTrips": "שגיאה בטעינת טיולים",
