--- a/lib/l10n/arb/app_it.arb
+++ b/lib/l10n/arb/app_it.arb
@@ -590,6 +590,7 @@
   "diveLog_detail_button_rangeAnalysis": "Analisi intervallo",
   "diveLog_detail_button_showEnd": "Mostra fine",
   "diveLog_detail_captureSignature": "Acquisisci firma istruttore",
+  "diveLog_detail_customFieldCount": "{count, plural, =1{1 field} other{{count} fields}}",
   "diveLog_detail_equipmentCount": "{count} {count, plural, =1{elemento} other{elementi}}",
   "diveLog_detail_errorLoading": "Errore nel caricamento dell'immersione",
   "diveLog_detail_label_airTemp": "Temp. aria",
@@ -628,6 +629,7 @@
   "diveLog_detail_section_altitudeDive": "Immersione in quota",
   "diveLog_detail_section_buddies": "Compagni",
   "diveLog_detail_section_conditions": "Condizioni",
+  "diveLog_detail_section_customFields": "Custom Fields",
   "diveLog_detail_section_decoStatus": "Stato decompressione",
   "diveLog_detail_section_details": "Dettagli",
   "diveLog_detail_section_diveProfile": "Profilo immersione",
@@ -671,6 +673,7 @@
   "diveLog_editSighting_removeTitle": "Rimuovere avvistamento?",
   "diveLog_editSighting_save": "Salva modifiche",
   "diveLog_edit_add": "Aggiungi",
+  "diveLog_edit_addCustomField": "Add Field",
   "diveLog_edit_addTank": "Aggiungi bombola",
   "diveLog_edit_addWeightEntry": "Aggiungi voce zavorra",
   "diveLog_edit_addedGps": "GPS aggiunto a {name}",
@@ -679,6 +682,10 @@
   "diveLog_edit_cancel": "Annulla",
   "diveLog_edit_clearAllEquipment": "Rimuovi tutto",
   "diveLog_edit_createdSite": "Sito creato: {name}",
+  "diveLog_edit_customFieldKey": "Key",
+  "diveLog_edit_customFieldKeyHint": "e.g., camera_settings",
+  "diveLog_edit_customFieldValue": "Value",
+  "diveLog_edit_customFieldValueHint": "e.g., f/8 ISO400",
   "diveLog_edit_durationMinutes": "Durata: {minutes} min",
   "diveLog_edit_equipmentHint": "Tocca \"Usa set\" o \"Aggiungi\" per selezionare l'attrezzatura",
   "diveLog_edit_errorLoadingDiveTypes": "Errore nel caricamento dei tipi di immersione: {error}",
@@ -719,6 +726,7 @@
   "diveLog_edit_saveAsSetDialog_title": "Salva come set di attrezzatura",
   "diveLog_edit_saveAsSetDialog_validation": "Inserisci un nome per il set",
   "diveLog_edit_section_conditions": "Condizioni",
+  "diveLog_edit_section_customFields": "Custom Fields",
   "diveLog_edit_section_depthDuration": "Profondita e durata",
   "diveLog_edit_section_diveCenter": "Centro immersioni",
   "diveLog_edit_section_diveSite": "Sito di immersione",
@@ -986,6 +994,8 @@
   "diveLog_search_appBar": "Ricerca avanzata",
   "diveLog_search_cancel": "Annulla",
   "diveLog_search_clearAll": "Cancella tutto",
+  "diveLog_search_customFieldKey": "Custom Field Key",
+  "diveLog_search_customFieldValue": "Value contains...",
   "diveLog_search_end": "Fine",
   "diveLog_search_errorLoadingCenters": "Errore nel caricamento dei centri immersione",
   "diveLog_search_errorLoadingTrips": "Errore nel caricamento dei viaggi",
