--- a/lib/l10n/arb/app_nl.arb
+++ b/lib/l10n/arb/app_nl.arb
@@ -947,6 +947,7 @@
   "diveLog_detail_collapsed_cnsMaxPpO2": "CNS: {cns} • Max ppO₂: {maxPpO2}",
   "diveLog_detail_collapsed_cnsMaxPpO2AtTime": "CNS: {cns} • Max ppO₂: {maxPpO2} • Om {timestamp}: {ppO2} bar",
   "diveLog_detail_collapsed_ndl": "NDL: {value}",
+  "diveLog_detail_customFieldCount": "{count, plural, =1{1 field} other{{count} fields}}",
   "diveLog_detail_equipmentCount": "{count} {count, plural, =1{item} other{items}}",
   "diveLog_detail_errorLoading": "Fout bij laden van duik",
   "diveLog_detail_fullscreen_sampleData": "Meetgegevens",
@@ -989,6 +990,7 @@
   "diveLog_detail_section_altitudeDive": "Hoogteduik",
   "diveLog_detail_section_buddies": "Buddy's",
   "diveLog_detail_section_conditions": "Omstandigheden",
+  "diveLog_detail_section_customFields": "Custom Fields",
   "diveLog_detail_section_decoStatus": "Decompressiestatus",
   "diveLog_detail_section_details": "Details",
   "diveLog_detail_section_diveProfile": "Duikprofiel",
@@ -1032,6 +1034,7 @@
   "diveLog_editSighting_removeTitle": "Waarneming verwijderen?",
   "diveLog_editSighting_save": "Wijzigingen opslaan",
   "diveLog_edit_add": "Toevoegen",
+  "diveLog_edit_addCustomField": "Add Field",
   "diveLog_edit_addTank": "Fles toevoegen",
   "diveLog_edit_addWeightEntry": "Gewicht toevoegen",
   "diveLog_edit_addedGps": "GPS toegevoegd aan {name}",
@@ -1040,6 +1043,10 @@
   "diveLog_edit_cancel": "Annuleren",
   "diveLog_edit_clearAllEquipment": "Alles wissen",
   "diveLog_edit_createdSite": "Duikstek aangemaakt: {name}",
+  "diveLog_edit_customFieldKey": "Key",
+  "diveLog_edit_customFieldKeyHint": "e.g., camera_settings",
+  "diveLog_edit_customFieldValue": "Value",
+  "diveLog_edit_customFieldValueHint": "e.g., f/8 ISO400",
   "diveLog_edit_durationMinutes": "Duur: {minutes} min",
   "diveLog_edit_equipmentHint": "Tik op \"Set gebruiken\" of \"Toevoegen\" om uitrusting te selecteren",
   "diveLog_edit_errorLoadingDiveTypes": "Fout bij laden van duiktypes: {error}",
@@ -1080,6 +1087,7 @@
   "diveLog_edit_saveAsSetDialog_title": "Opslaan als uitrustingsset",
   "diveLog_edit_saveAsSetDialog_validation": "Voer een setnaam in",
   "diveLog_edit_section_conditions": "Omstandigheden",
+  "diveLog_edit_section_customFields": "Custom Fields",
   "diveLog_edit_section_depthDuration": "Diepte & Duur",
   "diveLog_edit_section_diveCenter": "Duikcentrum",
   "diveLog_edit_section_diveSite": "Duikstek",
@@ -1350,6 +1358,8 @@
   "diveLog_search_appBar": "Geavanceerd zoeken",
   "diveLog_search_cancel": "Annuleren",
   "diveLog_search_clearAll": "Alles wissen",
+  "diveLog_search_customFieldKey": "Custom Field Key",
+  "diveLog_search_customFieldValue": "Value contains...",
   "diveLog_search_end": "Einde",
   "diveLog_search_errorLoadingCenters": "Fout bij laden van duikcentra",
   "diveLog_search_errorLoadingDiveTypes": "Fout bij laden duiktypes",
