--- a/lib/l10n/arb/app_pt.arb
+++ b/lib/l10n/arb/app_pt.arb
@@ -590,6 +590,7 @@
   "diveLog_detail_button_rangeAnalysis": "Analise de Intervalo",
   "diveLog_detail_button_showEnd": "Mostrar final",
   "diveLog_detail_captureSignature": "Capturar Assinatura do Instrutor",
+  "diveLog_detail_customFieldCount": "{count, plural, =1{1 field} other{{count} fields}}",
   "diveLog_detail_equipmentCount": "{count} {count, plural, =1{item} other{itens}}",
   "diveLog_detail_errorLoading": "Erro ao carregar mergulho",
   "diveLog_detail_label_airTemp": "Temp do Ar",
@@ -628,6 +629,7 @@
   "diveLog_detail_section_altitudeDive": "Mergulho em Altitude",
   "diveLog_detail_section_buddies": "Duplas",
   "diveLog_detail_section_conditions": "Condicoes",
+  "diveLog_detail_section_customFields": "Custom Fields",
   "diveLog_detail_section_decoStatus": "Status de Descompressao",
   "diveLog_detail_section_details": "Detalhes",
   "diveLog_detail_section_diveProfile": "Perfil do Mergulho",
@@ -671,6 +673,7 @@
   "diveLog_editSighting_removeTitle": "Remover Avistamento?",
   "diveLog_editSighting_save": "Salvar Alteracoes",
   "diveLog_edit_add": "Adicionar",
+  "diveLog_edit_addCustomField": "Add Field",
   "diveLog_edit_addTank": "Adicionar Cilindro",
   "diveLog_edit_addWeightEntry": "Adicionar Entrada de Lastro",
   "diveLog_edit_addedGps": "GPS adicionado a {name}",
@@ -679,6 +682,10 @@
   "diveLog_edit_cancel": "Cancelar",
   "diveLog_edit_clearAllEquipment": "Limpar Tudo",
   "diveLog_edit_createdSite": "Ponto criado: {name}",
+  "diveLog_edit_customFieldKey": "Key",
+  "diveLog_edit_customFieldKeyHint": "e.g., camera_settings",
+  "diveLog_edit_customFieldValue": "Value",
+  "diveLog_edit_customFieldValueHint": "e.g., f/8 ISO400",
   "diveLog_edit_durationMinutes": "Duracao: {minutes} min",
   "diveLog_edit_equipmentHint": "Toque em \"Usar Conjunto\" ou \"Adicionar\" para selecionar equipamentos",
   "diveLog_edit_errorLoadingDiveTypes": "Erro ao carregar tipos de mergulho: {error}",
@@ -719,6 +726,7 @@
   "diveLog_edit_saveAsSetDialog_title": "Salvar como Conjunto de Equipamentos",
   "diveLog_edit_saveAsSetDialog_validation": "Por favor, insira um nome para o conjunto",
   "diveLog_edit_section_conditions": "Condicoes",
+  "diveLog_edit_section_customFields": "Custom Fields",
   "diveLog_edit_section_depthDuration": "Profundidade e Duracao",
   "diveLog_edit_section_diveCenter": "Operadora de Mergulho",
   "diveLog_edit_section_diveSite": "Ponto de Mergulho",
@@ -986,6 +994,8 @@
   "diveLog_search_appBar": "Busca Avancada",
   "diveLog_search_cancel": "Cancelar",
   "diveLog_search_clearAll": "Limpar Tudo",
+  "diveLog_search_customFieldKey": "Custom Field Key",
+  "diveLog_search_customFieldValue": "Value contains...",
   "diveLog_search_end": "Fim",
   "diveLog_search_errorLoadingCenters": "Erro ao carregar centros de mergulho",
   "diveLog_search_errorLoadingTrips": "Erro ao carregar viagens",
