--- a/lib/l10n/arb/app_de.arb
+++ b/lib/l10n/arb/app_de.arb
@@ -590,6 +590,7 @@
   "diveLog_detail_button_rangeAnalysis": "Bereichsanalyse",
   "diveLog_detail_button_showEnd": "Ende anzeigen",
   "diveLog_detail_captureSignature": "Unterschrift des Tauchlehrers erfassen",
+  "diveLog_detail_customFieldCount": "{count, plural, =1{1 field} other{{count} fields}}",
   "diveLog_detail_equipmentCount": "{count} {count, plural, =1{Gegenstand} other{Gegenstaende}}",
   "diveLog_detail_errorLoading": "Fehler beim Laden des Tauchgangs",
   "diveLog_detail_label_airTemp": "Lufttemperatur",
@@ -628,6 +629,7 @@
   "diveLog_detail_section_altitudeDive": "Hoehentauchgang",
   "diveLog_detail_section_buddies": "Tauchpartner",
   "diveLog_detail_section_conditions": "Bedingungen",
+  "diveLog_detail_section_customFields": "Custom Fields",
   "diveLog_detail_section_decoStatus": "Dekompressionsstatus",
   "diveLog_detail_section_details": "Details",
   "diveLog_detail_section_diveProfile": "Tauchprofil",
@@ -671,6 +673,7 @@
   "diveLog_editSighting_removeTitle": "Sichtung entfernen?",
   "diveLog_editSighting_save": "Aenderungen speichern",
   "diveLog_edit_add": "Hinzufuegen",
+  "diveLog_edit_addCustomField": "Add Field",
   "diveLog_edit_addTank": "Flasche hinzufuegen",
   "diveLog_edit_addWeightEntry": "Gewichtseintrag hinzufuegen",
   "diveLog_edit_addedGps": "GPS zu {name} hinzugefuegt",
@@ -679,6 +682,10 @@
   "diveLog_edit_cancel": "Abbrechen",
   "diveLog_edit_clearAllEquipment": "Alle entfernen",
   "diveLog_edit_createdSite": "Tauchplatz erstellt: {name}",
+  "diveLog_edit_customFieldKey": "Key",
+  "diveLog_edit_customFieldKeyHint": "e.g., camera_settings",
+  "diveLog_edit_customFieldValue": "Value",
+  "diveLog_edit_customFieldValueHint": "e.g., f/8 ISO400",
   "diveLog_edit_durationMinutes": "Dauer: {minutes} min",
   "diveLog_edit_equipmentHint": "Tippen Sie auf \"Set verwenden\" oder \"Hinzufuegen\" um Ausruestung auszuwaehlen",
   "diveLog_edit_errorLoadingDiveTypes": "Fehler beim Laden der Tauchgangsarten: {error}",
@@ -719,6 +726,7 @@
   "diveLog_edit_saveAsSetDialog_title": "Als Ausruestungsset speichern",
   "diveLog_edit_saveAsSetDialog_validation": "Bitte geben Sie einen Set-Namen ein",
   "diveLog_edit_section_conditions": "Bedingungen",
+  "diveLog_edit_section_customFields": "Custom Fields",
   "diveLog_edit_section_depthDuration": "Tiefe & Dauer",
   "diveLog_edit_section_diveCenter": "Tauchbasis",
   "diveLog_edit_section_diveSite": "Tauchplatz",
@@ -986,6 +994,8 @@
   "diveLog_search_appBar": "Erweiterte Suche",
   "diveLog_search_cancel": "Abbrechen",
   "diveLog_search_clearAll": "Alles loeschen",
+  "diveLog_search_customFieldKey": "Custom Field Key",
+  "diveLog_search_customFieldValue": "Value contains...",
   "diveLog_search_end": "Ende",
   "diveLog_search_errorLoadingCenters": "Fehler beim Laden der Tauchbasen",
   "diveLog_search_errorLoadingTrips": "Fehler beim Laden der Reisen",
