--- a/lib/l10n/arb/app_hu.arb
+++ b/lib/l10n/arb/app_hu.arb
@@ -590,6 +590,7 @@
   "diveLog_detail_button_rangeAnalysis": "Tartomany elemzes",
   "diveLog_detail_button_showEnd": "Veg mutatasa",
   "diveLog_detail_captureSignature": "Oktatoi alairas rogzitese",
+  "diveLog_detail_customFieldCount": "{count, plural, =1{1 field} other{{count} fields}}",
   "diveLog_detail_equipmentCount": "{count} {count, plural, =1{targy} other{targy}}",
   "diveLog_detail_errorLoading": "Hiba a merules betoltesekor",
   "diveLog_detail_label_airTemp": "Levego hom.",
@@ -628,6 +629,7 @@
   "diveLog_detail_section_altitudeDive": "Magassagi merules",
   "diveLog_detail_section_buddies": "Buddyk",
   "diveLog_detail_section_conditions": "Korulmenyek",
+  "diveLog_detail_section_customFields": "Custom Fields",
   "diveLog_detail_section_decoStatus": "Dekompresszios allapot",
   "diveLog_detail_section_details": "Reszletek",
   "diveLog_detail_section_diveProfile": "Merulesi profil",
@@ -671,6 +673,7 @@
   "diveLog_editSighting_removeTitle": "Eszleles eltavolitasa?",
   "diveLog_editSighting_save": "Valtozasok mentese",
   "diveLog_edit_add": "Hozzaadas",
+  "diveLog_edit_addCustomField": "Add Field",
   "diveLog_edit_addTank": "Palack hozzaadasa",
   "diveLog_edit_addWeightEntry": "Suly bevetel hozzaadasa",
   "diveLog_edit_addedGps": "GPS hozzaadva: {name}",
@@ -679,6 +682,10 @@
   "diveLog_edit_cancel": "Megse",
   "diveLog_edit_clearAllEquipment": "Osszes torlese",
   "diveLog_edit_createdSite": "Letrehozott merulohely: {name}",
+  "diveLog_edit_customFieldKey": "Key",
+  "diveLog_edit_customFieldKeyHint": "e.g., camera_settings",
+  "diveLog_edit_customFieldValue": "Value",
+  "diveLog_edit_customFieldValueHint": "e.g., f/8 ISO400",
   "diveLog_edit_durationMinutes": "Idotartam: {minutes} min",
   "diveLog_edit_equipmentHint": "Koppintson a \"Keszlet hasznalata\" vagy \"Hozzaadas\" gombra a felszereles kivalasztasahoz",
   "diveLog_edit_errorLoadingDiveTypes": "Hiba a merules tipusok betoltesekor: {error}",
@@ -719,6 +726,7 @@
   "diveLog_edit_saveAsSetDialog_title": "Mentes felszereléskészletként",
   "diveLog_edit_saveAsSetDialog_validation": "Kerjuk adjon meg egy keszletnevet",
   "diveLog_edit_section_conditions": "Korulmenyek",
+  "diveLog_edit_section_customFields": "Custom Fields",
   "diveLog_edit_section_depthDuration": "Melyseg es idotartam",
   "diveLog_edit_section_diveCenter": "Merulocentrum",
   "diveLog_edit_section_diveSite": "Merulohely",
@@ -986,6 +994,8 @@
   "diveLog_search_appBar": "Reszletes kereses",
   "diveLog_search_cancel": "Megse",
   "diveLog_search_clearAll": "Osszes torlese",
+  "diveLog_search_customFieldKey": "Custom Field Key",
+  "diveLog_search_customFieldValue": "Value contains...",
   "diveLog_search_end": "Vege",
   "diveLog_search_errorLoadingCenters": "Hiba a merulokozpontok betoltesekor",
   "diveLog_search_errorLoadingTrips": "Hiba az utazasok betoltesekor",
